
- Correct partly the problem of translating regex to ogc:Literal (bug 1644)

- schemas.opengeospatial.net has been shutdown, use schemas.opengis.net 
  instead as the default schema repository for OGC services (bug 1873)

- MIGRATION_GUIDE.TXT has been created to document backwards incompatible
  changes between 4.8 and 4.10

- Fixed php_mapscript Windows build that was broken in beta1 (bug 1872)

- Supported <propertyname> tag in SLD label (Bug 1857)

- Use the label element in the ColorMapEntry for the raster symbolizer
  (Bug 1844)

- Adding Geos functions to php mapscript (bug 1327)

- Added a type cast to msio.i so as to eliminate the warning with the
  SWIG unix/osx builds

- Fixed csharp/Makefile.in for supporting the OSX builds and creating 
  the platform dependent mapscript_csharp.dll.config file.

- Fixed error in detection of libpdf.sl in configure.in (bug 1868).


Version 4.10.0-beta1 (2006-08-17)
---------------------------------

- Marking the following SWIG object members immutable (bug 1803)
  layerObj.metadata, classObj.label, classObj.metadata,
  fontSetObj.fonts, legendObj.label, mapObj.symbolset,
  mapObj.fontset, mapObj.labelcache, mapObj.reference,
  mapObj.scalebar, mapObj.legend, mapObj.querymap
  mapObj.web, mapObj.configoptions, webObj.metadata,
  imageObj.format, classObj.layer, legendObj.map,
  webObj.map, referenceMapObj.map
  labelPathObj was made completely hidden (according to Steve's suggestion)

- Fixed problem with PHP MapScript's saveWebImage() filename collisions
  when mapscript was loaded in php.ini with PHP as an Apache DSO (bug 1322)

- Produce warning in WFS GetFeature output if ???_featureid is specified
  but corresponding item is not found in layer (bug 1781). Also produce
  a warning in GetCapabilities if ???_featureid not set (bug 1782)

- Removed the default preallocation of 4 values causing memory leaks.
  (related to bug 1801) Added initValues to achieve the similar 
  functionality if needed.
