@@ -32,6 +32,10 @@ Version 4.10.0-beta2 (CVS)
 - MIGRATION_GUIDE.TXT has been created to document backwards incompatible
   changes between 4.8 and 4.10
 
+- Modify mapgd.c to use MS_NINT_GENERIC to avoid rounding issues. (bug 1716)
+
+- added --disable-fast-nint configure directive (bug 1716)
+
 - Fixed php_mapscript Windows build that was broken in beta1 (bug 1872)
 
 - Supported <propertyname> tag in SLD label (Bug 1857)
